# supermemory

./: .cursorrules  .eslintrc.cjs  .eslintrc.js  .gitignore  .gitmodules  .npmrc  .prettierignore  .prettierrc  AGENT_PROMPT.md  AUTH_AGENT_INTEGRATION.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PR_BODY.md  README.md  README.zh-CN.md  SELF-HOSTING-GUIDE.md  SETUP-GUIDE.md  TODO.md  biome.json  bun.lockb  components.json  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json  pnpm-lock.yaml  portless.json  setup.sh  turbo.json
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  claude-auto-fix-ci.yml  claude-code-review.yml  claude.yml  publish-agent-framework-python.yml  publish-ai-sdk.yml  publish-cartesia-sdk-python.yml  publish-convex-component.yml  publish-memory-graph.yml  publish-openai-sdk-python.yml  publish-pipecat-sdk-python.yml  publish-tools.yml  release.yml
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: auth.rs  lib.rs  main.rs  smfs.rs  spotlight.rs  tools.rs  tray.rs
data-generator/: README.md  clusterer.py  generate.py  planner.py  questions.py  requirements.txt  test_clusterer.py  test_planner.py  test_questions.py  test_utils.py  test_validator.py  test_worker.py  utils.py  validator.py  worker.py
docs/: architecture-diagram.md  arquitetura.md  changelog.md  chatlog.md  mapeamento_projeto.md  planejamento_fases.md
migrations/: 0000_omniscient_stick.sql
patches/: @udecode%2Fplate-emoji@40.0.0.patch  raf@3.4.1.patch
scripts/: check-zod-version.ts
(+2195 files in other folders)
