[package]
name = "supermemory"
version = "0.1.0"
description = "supermemory"
edition = "2021"
rust-version = "1.77.2"

[lib]
# The app logic lives in a library crate so it can be shared with a future
# mobile target; `main.rs` is a thin binary that calls into it.
name = "supermemory_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
keyring = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
